# playground

./: .gitignore  cloudbuild.yaml
.github/: CODEOWNERS
.github/workflows/: backend_dev.yaml  backend_release.yaml  frontend_dev.yaml  frontend_release.yaml  infra.yaml  infra_apply.yaml  infra_dev.yaml  infra_dev_apply.yaml  infra_release.yaml  maze_creator_dev.yaml  maze_creator_release.yaml
backend/: CLAUDE.md  Cargo.toml  Dockerfile
backend/.sqlx/: query-2bc589076b4e27e7ac7da55d1cc23edda64dc061488666bdd10b2ed7e2c3e5f1.json  query-7094f9c9a2a38fb7650ec936a5470acebd0a073a16c009f33cb054809560559b.json  query-bd6591d40a782ff34cfc657bcb818c924178e87e2e6c79989093b944d8eb6195.json  query-f24e558ea012919d34d054cc6ac1920aa97b496bf6283e7d363a63b0f147cc3d.json
backend/handler/: Cargo.toml
backend/handler/src/: cf_jwt.rs  error.rs  extractor.rs  handle_blogs.rs  lib.rs
backend/handler/src/model/: blog.rs  user.rs
backend/shared/: Cargo.toml
backend/shared/src/: config.rs  jwks_cache.rs  lib.rs  markdown_converter.rs
backend/src/: main.rs
backend/src/migrations/: 20260419173507_change-user-schema-add-role.down.sql  20260419173507_change-user-schema-add-role.up.sql  20260419175129_set-role-and-email-notnull.down.sql  20260419175129_set-role-and-email-notnull.up.sql  20260503131112_set_status_not_null.down.sql  20260503131112_set_status_not_null.up.sql  20260517140329_add-slug.down.sql  20260517140329_add-slug.up.sql  20260517162334_slug_not_nullable.down.sql  20260517162334_slug_not_nullable.up.sql
backend/storage/: Cargo.toml
backend/storage/.sqlx/: query-0a2ada0f3d7a10e3d1f72f9447e56d8fd4f00640dcedacca9f039d80956968b8.json  query-430221eb41121f9253323355b2c36a9cafedbb840b7fd929019ca583121efb08.json  query-81928a14455bf434f31a6ed15c2479078b17083783a4d1eac1b8885b77a2a9fd.json  query-978ad8f7c11af46cd3c13e6b97c28486d7dce784ea45fcc358e55bf4a38baeb7.json  query-a5ce6f991084c7667e461beec754fb2d8443e3be37e5d5ebc2f766afd3e58c84.json  query-ebd5389a3b90a09820756743f92cf5c3422870fee2660f03e2e027d027989594.json
backend/storage/src/: lib.rs  repository.rs
backend/storage/src/blogs/: blog_repository.rs
backend/storage/src/users/: user_repository.rs
backend/usecase/: Cargo.toml
backend/usecase/src/errors/: app_error.rs  repo_error.rs
backend/usecase/src/model/: blog.rs  helper.rs  mod.rs  user.rs
backend/usecase/src/repository/: blog.rs  user.rs
backend/usecase/src/service/: service.rs
backend/usecase/src/service/blog/: blog_service.rs
backend/usecase/src/service/user/: user_service.rs
frontend/: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
frontend/.claude/: settings.local.json
frontend/.claude/rules/: coding-rules.md
frontend/.storybook/: preview.ts
frontend/src/: App.tsx  blog.tsx  main.tsx  server.tsx
frontend/src/auth/: RequireAuth.tsx
frontend/src/blog/: BlogTop.stories.tsx  change.md
frontend/src/blog/wasm/: Cargo.toml
frontend/src/blog/wasm/src/: lib.rs
frontend/src/errors/: Unauthorized.tsx
frontend/src/helper/: CheckUser.ts  VerifyAuthentication.ts
frontend/src/maze-creator/: App.tsx  maze.html
frontend/src/maze-creator/rust/: Cargo.toml
frontend/src/maze-creator/rust/src/: dom.rs  lib.rs
frontend/src/maze-creator/rust/src/algo/: mod.rs  single_stroke.rs
infrastracture/dev/: terraform.tfstate  values.tf
infrastructure/dev/: .terraform.lock.hcl  .terraform.tfstate.lock.info  backend.tf  google_cloud_run.tf  google_cloud_run_service_iam_member.tf  google_project.tf  google_project_iam_member.tf  google_secret_manager_secret.tf  google_service_account_iam_member.tf  google_service_accounts.tf  google_workload_identity.tf  main.tf  terraform.tfstate  terraform.tfstate.backup  values.tf
infrastructure/dev/iam/: backend.tf  google_project_iam_member.tf  google_storage_bucket_iam_member.tf  google_workload_identity.tf  main.tf
infrastructure/prod/: .terraform.lock.hcl  backend.tf  google_artifact_registry.tf  google_cloud_build.tf  google_cloud_run.tf  google_cloud_run_service_iam_member.tf  google_project.tf  google_project_iam_member.tf  google_project_service_identity.tf  google_secret_manager.tf  google_secret_manager_secret_iam_member.tf  google_service_accounts.tf  google_workload_identity.tf  main.tf  values.tf
(+135 files in other folders)
