[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["handler", "usecase", "storage", "shared"]

[workspace.dependencies]
handler = { path = "./handler" }
usecase = { path = "./usecase" }
storage = { path = "./storage" }
shared = { path = "./shared" }
registry = { path = "./registry" }
anyhow = "1.0.100"
async-shutdown = "0.2.2"
axum = { version="0.8.8", features = ["multipart"]}
axum-extra = { version="0.12.5", features = ["typed-header", "cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "json",
    "uuid",
    "migrate",
    "macros",
    "sqlx-macros",
    "sqlx-postgres"
    ]}
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "rt",
    "tokio-macros",
    "sync"
    ]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "json"
    ]}
async-trait = "0.1.89"
uuid = { version = "1.20.0", features = [
    "v7"
]}
aws-config = "1.8.14"
aws-sdk-s3 = "1.123.0"
argon2 = "0.5.3"
thiserror = "2.0.18"
mockall = "0.14.0"
bytes = "1.11.1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
pulldown-cmark = "0.13.3"



[dependencies]
handler.workspace = true
usecase.workspace = true
storage.workspace = true
shared.workspace = true

anyhow.workspace = true
async-shutdown.workspace = true
axum.workspace = true
chrono.workspace = true
dotenv.workspace = true
log.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
async-trait.workspace = true
uuid.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
argon2.workspace = true
thiserror.workspace = true
mockall.workspace = true
bytes.workspace = true
axum-extra.workspace = true
pulldown-cmark.workspace = true
