[package]
name = "handler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
async-trait.workspace = true
usecase.workspace = true
shared.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true