[package]
name = "usecase"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace = true

serde.workspace = true
chrono.workspace = true
async-trait.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace  = true
sqlx.workspace = true
thiserror.workspace = true
bytes.workspace = true