[package]
name = "wasm"
version = "0.1.0"
description = "Create maze by wasm"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
js-sys = "0.3.77"
rand = { version = "0.9.0", default-features = false, features = ["small_rng", "std"] }
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
getrandom = { version = "0.2.15", features = ["js"] }
console_error_panic_hook = "0.1"
wasm-logger = "0.2.0"
log = "0.4.28"


[dependencies.web-sys]
version = "0.3.77"
features = [
  'Document',
  'Element',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'console'
]

[dev-dependencies]
rstest = "0.26.1"
